Bug 288834 - [Regression] Templates broken when replying in HTML
Summary: [Regression] Templates broken when replying in HTML
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 1.99.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 289820 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-12 20:11 UTC by simon
Modified: 2011-12-26 06:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2011-12-12 20:11:54 UTC
Version:           1.99.0 (using Devel) 
OS:                Linux

hi,

the parsing of the template tokens is faulty and normal text in the the templates like "you wrote" are lost

Reproducible: Always

Steps to Reproduce:
reply to a mail in html

Actual Results:  
parts of templates are lost

Expected Results:  
just work

OS: Linux (x86_64) release 2.6.38-tuxonice-r1
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Torgny Nyblom 2011-12-13 13:31:06 UTC
Git commit bc19958546af49921bc85aae59936353ec572e69 by Torgny Nyblom.
Committed on 13/12/2011 at 14:30.
Pushed by tnyblom into branch 'master'.

Don't swallow plain text from templates

BUG: 288834

M  +2    -0    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/bc19958546af49921bc85aae59936353ec572e69
Comment 2 Torgny Nyblom 2011-12-26 06:38:10 UTC
*** Bug 289820 has been marked as a duplicate of this bug. ***