Don't swallow plain text from templates

BUG: 288834